# celebal_project

./: .env.example  .gitignore  Makefile  README.md  app.py  project_audit.md  pyproject.toml  walkthrough.md
.agents/skills/: developing-with-streamlit
.streamlit/: config.toml
benchmark/: questions.jsonl
src/patchcontext/: __init__.py  answer.py  cli.py  config.py  embeddings.py  evaluate.py  github_client.py  guard.py  index.py  ingest.py  models.py  retrieval.py  text.py
src/patchcontext.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_models.py  test_text.py
